헤더 파일에서 소스 파일로

--- a/StacksAndQueues/StacksAndQueues.vcxproj.filters
+++ b/StacksAndQueues/StacksAndQueues.vcxproj.filters
@@ -15,14 +15,14 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\Queue.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="..\..\Queue.c">
+      <Filter>소스 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Stack.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="..\..\Stack.c">
+      <Filter>소스 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\CircularQueue.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="..\..\CircularQueue.c">
+      <Filter>소스 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
