--- a/StacksAndQueues/StacksAndQueues.vcxproj
+++ b/StacksAndQueues/StacksAndQueues.vcxproj
@@ -18,6 +18,11 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\CircularQueue.c" />
+    <ClInclude Include="..\..\Queue.c" />
+    <ClInclude Include="..\..\Stack.c" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -138,11 +143,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\CircularQueue.h" />
-    <ClInclude Include="..\..\Queue.h" />
-    <ClInclude Include="..\..\Stack.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
