--- a/StacksAndQueues/StacksAndQueues.vcxproj
+++ b/StacksAndQueues/StacksAndQueues.vcxproj
@@ -19,9 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CircularQueue.cpp" />
-    <ClCompile Include="Queue.cpp" />
-    <ClCompile Include="Stack.cpp" />
+    <ClCompile Include="CircularQueue.c" />
+    <ClCompile Include="Queue.c" />
+    <ClCompile Include="Stack.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
