--- a/StacksAndQueues/StacksAndQueues.vcxproj.filters
+++ b/StacksAndQueues/StacksAndQueues.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CircularQueue.cpp">
+    <ClCompile Include="CircularQueue.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Stack.cpp">
+    <ClCompile Include="Stack.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Queue.cpp">
+    <ClCompile Include="Queue.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
