--- a/StacksAndQueues/StacksAndQueues.vcxproj
+++ b/StacksAndQueues/StacksAndQueues.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CircularQueue.c" />
+    <ClCompile Include="Maze(Stack).c" />
     <ClCompile Include="Queue.c" />
     <ClCompile Include="Stack.c" />
   </ItemGroup>
