--- a/StacksAndQueues/StacksAndQueues.vcxproj.filters
+++ b/StacksAndQueues/StacksAndQueues.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="Queue.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Maze(Stack).c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
